# library

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  db.session.sql  docker-compose.yml  example.csv  pyproject.toml  schema.sql
.github/workflows/: pipeline.yml
app/: db.py  main.py
app/core/: config.py  jwt.py  security.py
app/core/exceptions/: __init__.py  base.py  book.py  db.py  order.py  token.py  user.py
app/crud/: __init__.py  book.py  db.py  user.py
app/models/: __init__.py  book.py  order.py  token.py  user.py
app/routers/: __init__.py  analytics.py  auth.py  book.py  order.py  ping.py  user.py
app/services/: __init__.py  analytics.py  book.py  order.py  user.py  validators.py
app/tasks/: __init__.py  celery.py  order.py
frontend/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: env.mjs
frontend/src/components/: avatarDropdown.tsx  baseModal.tsx  complectationDropdown.tsx  errorMessage.tsx  header.tsx  itemCard.tsx  loader.tsx  orderTable.tsx  productFilter.tsx  searchBar.tsx  searchSuggestion.tsx  signIn.tsx  signUp.tsx  swiper.tsx
frontend/src/constants/: orderStatusMap.ts  roles.ts  urls.ts
frontend/src/mutations/: useCheckout.ts  useComplectation.ts  useEditProfile.ts  useItem.ts  useOrders.ts  useSignIn.ts  useSignUp.ts  useUser.ts
frontend/src/pages/: _app.tsx  _document.tsx  admin.tsx  cart.tsx  home.tsx  index.tsx  orders.tsx  profile.tsx
frontend/src/queries/: useFilters.ts  useItem.ts  useItems.ts  useOrders.ts  useUser.ts
(+12 files in other folders)
